# shuuro

./: .clippy.toml  Cargo.toml  LICENSE  README.md  main.py  rustfmt.toml
src/: attacks.rs  bitboard.rs  board.rs  board_defs.rs  board_set.rs  color.rs  error.rs  hand.rs  lib.rs  main.rs  moves.rs  piece.rs  piece_directions.rs  piece_enums.rs  piece_moves.rs  piece_type.rs  plinths_set.rs  plynths_set.rs  position.rs  position_set.rs  sfen_str.rs  shop.rs  square.rs  variant.rs
src/shuuro12/: attacks12.rs  bitboard12.rs  board_defs.rs  mod.rs  plinths_set12.rs  position12.rs  shop.rs  square12.rs
src/shuuro6/: attacks6.rs  bitboard6.rs  board_defs.rs  mod.rs  plinths_set6.rs  position6.rs  square6.rs
src/shuuro8/: attacks8.rs  bitboard8.rs  board_defs.rs  mod.rs  plinths_set8.rs  position8.rs  square8.rs
src/shuuro_rules/: attacks.rs  bitboard.rs  color.rs  error.rs  hand.rs  mod.rs  moves.rs  piece.rs  piece_type.rs  plinths_set.rs  position.rs  selection.rs  shop.rs  square.rs  subvariant.rs  variant.rs
tests/: position12.rs  position8.rs
