[package]
name = "shuuro"
version = "0.5.0"
authors = ["uros-5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
bitintr = "0.3"
thiserror = "1.0"

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[lib]
doctest = true
