[package]
name = "shuuro"
version = "1.0.0"
authors = ["uros-5"]
edition = "2021"
description = "Bitboard based Shuuro library."
categories = ["games", "parser-implementations"]
keywords = ["chess", "shuuro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uros-5/shuuro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
shuuro12 = []
shuuro8 = []
shuuro6 = []
standard = []

[dependencies]
itertools = "0.10"
thiserror = "1.0"
rand = "0.8.4"

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[lib]
doctest = true
